# ComfyUI-SCAIL2-Easy

./: .gitignore  LICENSE  README.md  README_EN.md  nodes.py  pyproject.toml  requirements.txt  scail2_context.py
web/: scail2_easy.js
workflow/: SCAIL2_simple.json
